tests/ui/nll/ty-outlives/projection-implied-bounds.stderr
error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/projection-implied-bounds.rs:28:36
   |
LL |     twice(value, |value_ref, item| invoke2(value_ref, item));
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^
   |                                    |
   |                                    the parameter type `T` must be valid for the static lifetime...
   |                                    ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound
   |
LL | fn generic2<T: Iterator + 'static>(value: T) {
   |                         +++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0310`.
